# ferrex

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  deny.toml  flake.nix  justfile
.config/: nextest.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/ferrex-core/: Cargo.toml
crates/ferrex-core/src/: entity.rs  error.rs  lib.rs  retrieval.rs  types.rs
crates/ferrex-embed/: Cargo.toml
crates/ferrex-embed/src/: lib.rs
crates/ferrex-server/: Cargo.toml
crates/ferrex-server/src/: main.rs
crates/ferrex-store/: Cargo.toml
crates/ferrex-store/src/: error.rs  lib.rs  metadata.rs  schema.rs  sidecar.rs  vector.rs
docs/design/: design-decisions.md  ferrex-rag-memory.md  future-improvements.md  references.md  roadmap.md
