[workspace]
members = []

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
implicit_return = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Dmytro Onypko <vaporif@proton.me>"]
repository = ""

[workspace.dependencies]
