[workspace]
members = [
    "crates/ferrex-embed",
    "crates/ferrex-store",
    "crates/ferrex-core",
    "crates/ferrex-server",
]
resolver = "3"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
implicit_return = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
significant_drop_tightening = "allow"
cargo_common_metadata = "allow"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Dmytro Onypko <vaporif@proton.me>"]
repository = ""

[workspace.dependencies]
# MCP
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Embedding
fastembed = "5"

# Vector store
qdrant-client = { version = "1", default-features = false, features = ["serde"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# String matching
strsim = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Error handling
thiserror = "2"
color-eyre = "0.6"
eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Filesystem
dirs = "6"
