[package]
name = "ferrex-core"
description = "Core library for ferrex — MemoryService, entity resolution, store/recall/stats"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ferrex-embed = { path = "../ferrex-embed" }
ferrex-store = { path = "../ferrex-store" }
chrono = { workspace = true }
qdrant-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
