[package]
name = "ferrex-server"
description = "MCP server for ferrex — thin shell over ferrex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ferrex-core = { path = "../ferrex-core" }
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
