[package]
name = "ferrex-store"
description = "Storage layer for ferrex — SQLite metadata + Qdrant vectors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
qdrant-client = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
